src/objects/General_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <label>Actual Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Value__c</fullName>
        <label>Budget Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Code Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>General Ledgers</relationshipLabel>
        <relationshipName>General_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Long_Description__c</fullName>
        <label>GL Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GL_Short_Description__c</fullName>
        <label>GL Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Type_Description__c</fullName>
        <label>GL Type Description</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Type__c</fullName>
        <label>GL Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Volatility__c</fullName>
        <label>Risk Volatility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Budget_Value__c  -  Actual_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>General Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GL_Type__c</columns>
        <columns>GL_Short_Description__c</columns>
        <columns>Budget_Value__c</columns>
        <columns>Actual_Value__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>General Ledger Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>